{
    "version": 1,
    "name": "InputActions",
    "maps": [
        {
            "name": "PlayerTopDown",
            "id": "fa57e2c7-2e04-4066-b3f5-7db5ce33bd6d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "7f8627b4-ec34-47da-91a9-441e1f538483",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "Button",
                    "id": "bfc637ae-053b-450b-895d-90e7707eabbd",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightClick",
                    "type": "Button",
                    "id": "733936f5-3e6a-40d2-9f05-ca2dabf60066",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "a1ebec3f-3359-4fc5-931b-36730273c3dd",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "50c1c19c-f780-43fb-a2dd-c307c2cac11c",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d1614c9b-5c6b-4456-b0c1-7d6313145f9b",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "20bd21a9-b1e7-4a32-ae71-f092ceea2270",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "37ca5d5c-0675-4bda-b1bd-55c22643334f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "913d7c80-ced1-4f95-a867-2a395e9a76cc",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc00f203-71cd-44f8-9afc-db31adc717a3",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RightClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerTurnBased",
            "id": "fcc086d8-b5f6-4897-8fa5-88e4fd0c465a",
            "actions": [],
            "bindings": []
        },
        {
            "name": "PlayerFPS",
            "id": "a771e854-01c5-473b-b638-bd8abca8ec94",
            "actions": [],
            "bindings": []
        },
        {
            "name": "PlayerTowerDefense",
            "id": "d317ae66-f6c2-4d1c-990b-dc877be4681a",
            "actions": [],
            "bindings": []
        },
        {
            "name": "UI",
            "id": "38fa99af-7564-46a5-93d8-92dc172399c5",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "6c369ffe-5a19-4044-970a-7e6691e00040",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8c0dc214-0953-489f-af29-acc309e761a9",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PopUpGame",
            "id": "00a02b0f-d267-464e-b7d5-f233e6793b55",
            "actions": [
                {
                    "name": "Naviagate",
                    "type": "Value",
                    "id": "28070395-4e0c-4f75-b595-30cf23a4924e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Left Click",
                    "type": "Button",
                    "id": "7b2ef7d7-2dfd-433f-b7cb-12e213512edc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Right Click",
                    "type": "Button",
                    "id": "4a878e6c-b530-44e8-abb9-d3d8d3048274",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "89b1e62a-82e2-4129-b417-31fa85f219d7",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Left Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "957d5d35-1faa-4a19-b778-6ac72bcc4ff9",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Right Click",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "058192e8-e8bb-4b52-a544-491f83c60cad",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9b65d882-de84-45a1-a066-40661de4d2b1",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dee4422b-9cad-4b57-b4fe-dd7baa4cb6b9",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "352cc35c-afbb-4580-9aa1-92fbc178bd2a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "df207c47-faec-4ce4-8a5c-4bef7f3e2ab7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "a77efc3e-d480-4c70-bc8f-b70505c97244",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2302f429-f5a5-40d1-9171-3e6eae941426",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "51f9ef89-fb31-4ba8-96e9-2692f2b1df97",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3fd8255e-e2e9-4708-a3d6-dd5cf183fc24",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "967342de-b464-4800-ba0a-eaf726fe2edd",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Naviagate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}